# docx-formatter

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  start.sh  vercel.json
.github/workflows/: ci.yml  deploy.yml
docs/: architecture.md
src/docx_formatter/: __init__.py  config.py
src/docx_formatter/api/: __init__.py  main.py  models.py  service.py
src/docx_formatter/api/routers/: __init__.py  format.py
src/docx_formatter/core/: __init__.py  assembler.py  extractor.py  llm_matcher.py  matcher.py  pipeline.py  types.py
tests/: create_fixtures.py  test_api.py  test_core.py  test_llm_matcher.py
tests/fixtures/: content_cv.docx  content_offer.docx  template_cv.docx  template_offer.docx
webapp/: app.js  index.html  styles.css
