[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docx-formatter"
version = "0.1.0"
description = "100% offline intelligent DOCX document formatting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Paul T", email = "ptrominski@gmail.com"},
]
keywords = ["docx", "document", "formatting", "template", "word"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Markup :: XML",
]

dependencies = [
    "python-docx==1.1.2",
    "lxml==5.3.0",
    "Pillow==11.0.0",
    "python-magic==0.4.27",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.12",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.6.1",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.0",
]
dev = [
    "docx-formatter[test]",
    "mypy==1.13.0",
    "ruff==0.8.0",
]

[project.urls]
Homepage = "https://github.com/p-trom/docx-formatter"
Repository = "https://github.com/p-trom/docx-formatter"
Issues = "https://github.com/p-trom/docx-formatter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
